# AIDocument

./: Dockerfile  README  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt
Agents/FileConvertAgents/: convertRun.py  convert_run.py  docx_converter.py  html_converter.py  json_converter.py  md_converter.py  pdf_converter.py  plugin_manager.py  txt_converter.py  yaml_converter.py
Agents/FileReviewAgents/: agentRun.py  agentRunF.py  agent_format.py  agent_run_f.py  agent_syntax.py  agent_terminology.py  agent_术语审核.py  agent_格式审核.py  agent_语法审核.py  content_extraction.py  文件内容提取.py  文本切分.py
Agents/RarAgents/: agentRunR.py  agent_detectability.py  agent_failure_event.py  agent_possibility.py  agent_potential_failure_consequences.py  agent_risk_control_measures.py  agent_risk_priority.py  agent_risk_rating.py  agent_run_r.py  agent_severity.py  agent严重性.py  agent可检测性.py  agent可能性.py  agent失效事件.py  agent潜在失效后果.py  agent风险优先级.py  agent风险控制措施.py  agent风险等级.py  client.py  file_read_and_write.py  文件读写.py
Api/ConvertApi/: convertApi.py  convert_api.py
Api/FileReviewApi/: fileReviewApi.py  file_review_api.py
Api/RarApi/: file_download_api.py  rarApi.py  rar_api.py
Configs/: logging_config.py
Configs/FileConvertConfig/: convertConfigInit.py  fileConvertConfig.json
Configs/FileReviewConfig/: fileReviewConfig1.json  fileReviewConfig2.json  termBank1.json
Configs/RarConfig/: rarConfig.json  rarConfigInit.py  rar_config_init.py
Files/RarUploads/: RAR空白模板.xlsx  urstemplate.xlsx
Results/FileReviewResult/: 文件审核结果.json
(+11 files in other folders)
