[project]
name = "aidocument"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aspose-words>=25.10.0",
    "fastapi>=0.119.0",
    "openai>=2.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
